# localite

./: .gitignore  CMakeLists.txt  imgui.ini  readme.md
.github/workflows/: cmake-multi-platform.yml
_data/: genuary27.json
src/: ContentBufferView.cpp  ContentBufferView.hpp  FileUtils.cpp  FileUtils.hpp  MediaPreview.cpp  MediaPreview.hpp  main.cpp  open_font_icons.hpp
